--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -9,6 +9,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="./style/commonStyle.css">
     <link rel="stylesheet" href="./style/resume.css">
+    <link rel="stylesheet" href="./style/sideBar.css">
 </head>
 <body>
     <!-- Floating Navigation Bar -->
@@ -251,8 +252,6 @@
                     <p>MouseHub: <a href="https://mousehub.com/" target="_blank">mousehub.com/chips</a></p>
                 </div>
             </div>
-            
-            <!-- Removing the redirect button since we now have the floating navigation -->
         </section>
 
         <!-- References section -->
@@ -266,6 +265,8 @@
                         <li>W3Schools. (n.d.). CSS Tutorial. https://www.w3schools.com/css/</li>
                         <li>W3Schools. (n.d.). JS Tutorial. https://www.w3schools.com/js/</li>
                         <li>Font Awesome. (n.d.). Font Awesome. https://fontawesome.com</li>
+                        <li>freeCodeCamp. (n.d.). HTML Best Practices. https://www.freecodecamp.org/news/html-best-practices/</li>
+                        <li>AbilityNet. (n.d.). An introduction to screen readers. https://abilitynet.org.uk/factsheets/introduction-screen-readers</li>
                     </ul>
                 </div>
                 <div class="reference-item">
@@ -292,7 +293,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="./script/sidebar.js"></script>
+    <script src="./script/sideBar.js"></script>
     <script src="./script/typing.js"></script>
     <script src="./script/resume.js"></script>
 </body>
