Easter egg added but new bugs were introduced

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -296,5 +296,6 @@
     <script src="./script/sideBar.js"></script>
     <script src="./script/typing.js"></script>
     <script src="./script/resume.js"></script>
+    <script src="./script/easterEgg.js"></script>
 </body>
 </html>
