Easter egg enter bug fixed

--- a/IndividualProject/bestprac.html
+++ b/IndividualProject/bestprac.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./style/commonStyle.css">
     <link rel="stylesheet" href="./style/bestprac.css">
     <link rel="stylesheet" href="./style/sideBar.css">
+    <link rel="stylesheet" href="./style/hero.css">
 </head>
 <body>
     <!-- Floating Navigation Bar -->
