--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./style/commonStyle.css">
     <link rel="stylesheet" href="./style/resume.css">
     <link rel="stylesheet" href="./style/sideBar.css">
+    <link rel="stylesheet" href="./style/hero.css">
+    <link rel="stylesheet" href="./style/easterEgg.css">
 </head>
 <body>
     <!-- Floating Navigation Bar -->
