Final changes of the project

--- a/IndividualProject/bestprac.html
+++ b/IndividualProject/bestprac.html
@@ -7,10 +7,10 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./style/commonStyle.css">
-    <link rel="stylesheet" href="./style/bestprac.css">
-    <link rel="stylesheet" href="./style/sideBar.css">
-    <link rel="stylesheet" href="./style/hero.css">
+    <link rel="stylesheet" href="./css/commonStyle.css">
+    <link rel="stylesheet" href="./css/bestPrac.css">
+    <link rel="stylesheet" href="./css/sideBar.css">
+    <link rel="stylesheet" href="./css/hero.css">
 </head>
 <body>
     <!-- Floating Navigation Bar -->
@@ -530,7 +530,7 @@ import { login, logout } from './userAuth.js';
                     </div>
                 </div>
                 <div id="reward-container" class="reward-container hidden">
-                    <img id="reward-image" src="" alt="Cute animal reward">
+                    <img id="reward-image" src="./img/placeholder.jpeg" alt="Cute animal reward">
                     <button id="new-reward-btn" class="new-reward-btn">
                         <i class="fas fa-sync-alt"></i> Get Another Cute Animal
                     </button>
@@ -553,8 +553,8 @@ import { login, logout } from './userAuth.js';
     </div>
 
     <!-- JavaScript -->
-    <script src="./script/sideBar.js"></script>
-    <script src="./script/typing.js"></script>
-    <script src="./script/bestprac.js"></script>
+    <script src="./js/sideBar.js"></script>
+    <script src="./js/typing.js"></script>
+    <script src="./js/bestPrac.js"></script>
 </body>
 </html>
