--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -7,11 +7,11 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Style -->
-    <link rel="stylesheet" href="./style/commonStyle.css">
-    <link rel="stylesheet" href="./style/resume.css">
-    <link rel="stylesheet" href="./style/sideBar.css">
-    <link rel="stylesheet" href="./style/hero.css">
-    <link rel="stylesheet" href="./style/easterEgg.css">
+    <link rel="stylesheet" href="./css/commonStyle.css">
+    <link rel="stylesheet" href="./css/resume.css">
+    <link rel="stylesheet" href="./css/sideBar.css">
+    <link rel="stylesheet" href="./css/hero.css">
+    <link rel="stylesheet" href="./css/easterEgg.css">
 </head>
 <body>
     <!-- Floating Navigation Bar -->
@@ -47,7 +47,7 @@
             <div class="about-content">
                 <div class="profile-picture-container">
                     <!-- Profile picture -->
-                    <img src="./imag/mouse.heic" alt="Chips the Mouse" class="profile-picture" id="profile-picture">
+                    <img src="./img/placeholder.jpeg" alt="Chips the Mouse" class="profile-picture" id="profile-picture">
                 </div>
                 <div class="about-text">
                     <p>Squeaks and greetings! I'm Chips, the intellectual mouse companion of Vincent Wang. Don't let my tiny paws fool you – I've mastered the art of keyboard navigation and can code faster than you can say "cheese!"</p>
@@ -269,14 +269,24 @@
                         <li>Font Awesome. (n.d.). Font Awesome. https://fontawesome.com</li>
                         <li>freeCodeCamp. (n.d.). HTML Best Practices. https://www.freecodecamp.org/news/html-best-practices/</li>
                         <li>AbilityNet. (n.d.). An introduction to screen readers. https://abilitynet.org.uk/factsheets/introduction-screen-readers</li>
+                        <li>Amazon Web Services. (n.d.). Caching Best Practices. https://aws.amazon.com/caching/best-practices/</li>
+                        <li>web.dev. (n.d.). Font best practices. https://web.dev/articles/font-best-practices</li>
+                        <li>Cloudflare. (n.d.). What is a CDN? https://www.cloudflare.com/en-au/learning/cdn/what-is-a-cdn/</li>
+                        <li>BlazeMeter. (n.d.). Continuous Performance Testing. https://www.blazemeter.com/blog/continuous-performance-testing</li>
+                        <li>Medium. (n.d.). JavaScript Modules. https://medium.com/cstech/javascript-modules-e3ef549a9e33</li>
+                        <li>SpeedCurve. (n.d.). Best Practices for Optimizing JavaScript. https://www.speedcurve.com/web-performance-guide/best-practices-for-optimizing-javascript/</li>
                     </ul>
                 </div>
+                <!-- Story of the project, try Konami Command -->
                 <div class="reference-item">
                     <h3>Story of the project</h3>
                     <p>This project is my first web development project. Before this semester, I tried to learn web development through online resources like public courses such as Harvard's CS50 and Wisconsin–Madison's CS571. However, I found it difficult to learn frameworks like React without first understanding how to work with the native DOM. I didn't fully grasp the fundamentals of DOM manipulation or how it functions, so I stopped these courses and switched to learning through documentation instead.</p>   
                     <p>My main focus became JavaScript after a friend who is a front-end development expert advised me that JavaScript is the most crucial part of front-end development. Although I had some JavaScript knowledge and experiences from doing labs of previous public courses, I felt overwhelmed when starting the project because it's completely nothing at the beginning and I wasn't sure about the proper workflow. To solve this, I studied some blog posts and personal portfolio websites to understand typical webpage components. I also used generative AI like Claude-3.7 and ChatGPT-o1 to help design the CSS styles since my own designs were ugly and it's a big work.</p>
                     <p>Starting with a basic HTML structure and CSS with help of AI, I attempted to implement interactive effects using JavaScript. During this phase, I also used AI to debug code, but discovered its limitations - even when I described the errors, the AI couldn't always fix them. Two solutions worked best: either using the browser's developer console to identify exactly where the error occurred (then feeding that information to the AI), or deleting problematic JavaScript code entirely and asking the AI to rewrite it. Some persistent issues arose because some AI-generated CSS occasionally conflicted with other elements - these were simple to fix once found, but hard to detect, especially since AI tools often miss CSS-related issues.</p>
-                    <p>After completing the main development, I researched industry best practices to improve the code quality and added proper source citations. For the resume section, being a second-year student with no work experience, I creatively substituted my own information with pictures of my pet rat and created a fictional rat-themed resume, which turned out to be both functional and humorous.</p>
+                    <p>After completing the main development, I researched industry best practices to improve the code quality and added proper source citations. For the resume section, being a first-year student with no work experience, I creatively substituted my own information with pictures of my pet rat and created a fictional rat-themed resume, which turned out to be both functional and humorous.</p>
+                    <p>Regarding the web design, I employed full-color blocking on the homepage combined with a typing animation for the title display - a common pattern seen in various blogs. Originally considered using background images, I ultimately opted for gradient colors to maintain visual consistency across the page. The design features two color schemes supporting different modes: light and dark modes. The layout utilizes floating boxes that trigger hover animations when scrolled into view. Third-party icon libraries are integrated to visually represent my technical stack and enhance button functionality, achieving both aesthetic appeal and usability.</p>
+                    <p>The website features a pill-shaped floating sidebar for page navigation and dark mode toggling, adopting a modern minimalist style. Below the sidebar resides a "Back to Top" button that maintains consistent styling and positioning with the sidebar. Notably, the framework intentionally avoids Bootstrap despite my prior coursework experience with it, instead using media queries for responsive design practice and performance optimization. jQuery was excluded due to its declining relevance in modern workflows, replaced by native JavaScript implementations. For API requests, the contemporary Fetch API is preferred over traditional AJAX. CSS and JavaScript files are modularly organized by functionality to facilitate maintenance and reuse.</p>
+                    <p>During initial development, numerous bugs emerged but were systematically resolved through continuous debugging. While time constraints prevented exhaustive testing, the current build demonstrates stable operation across major browsers, having passed cross-browser compatibility checks. The codebase maintains clear documentation and standardized citation practices for third-party resources.</p>
                 </div>
             </div>
         </section>
@@ -295,9 +305,9 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="./script/sideBar.js"></script>
-    <script src="./script/typing.js"></script>
-    <script src="./script/resume.js"></script>
-    <script src="./script/easterEgg.js"></script>
+    <script src="./js/sideBar.js"></script>
+    <script src="./js/typing.js"></script>
+    <script src="./js/resume.js"></script>
+    <script src="./js/easterEgg.js"></script>
 </body>
 </html>
