branch testing and some resources added

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -267,14 +267,16 @@
                         <li>W3Schools. (n.d.). CSS Tutorial. https://www.w3schools.com/css/</li>
                         <li>W3Schools. (n.d.). JS Tutorial. https://www.w3schools.com/js/</li>
                         <li>Font Awesome. (n.d.). Font Awesome. https://fontawesome.com</li>
-                        <li>freeCodeCamp. (n.d.). HTML Best Practices. https://www.freecodecamp.org/news/html-best-practices/</li>
+                        <li>Cess. (2022, January 3). HTML Best Practices – How to Build a Better HTML-Based Website. freeCodeCamp. https://www.freecodecamp.org/news/html-best-practices/</li>
                         <li>AbilityNet. (n.d.). An introduction to screen readers. https://abilitynet.org.uk/factsheets/introduction-screen-readers</li>
-                        <li>Amazon Web Services. (n.d.). Caching Best Practices. https://aws.amazon.com/caching/best-practices/</li>
-                        <li>web.dev. (n.d.). Font best practices. https://web.dev/articles/font-best-practices</li>
-                        <li>Cloudflare. (n.d.). What is a CDN? https://www.cloudflare.com/en-au/learning/cdn/what-is-a-cdn/</li>
-                        <li>BlazeMeter. (n.d.). Continuous Performance Testing. https://www.blazemeter.com/blog/continuous-performance-testing</li>
-                        <li>Medium. (n.d.). JavaScript Modules. https://medium.com/cstech/javascript-modules-e3ef549a9e33</li>
+                        <li>Özmen, B. (2023, November 8). JavaScript Modules. Medium: ÇSTech. https://medium.com/cstech/javascript-modules-e3ef549a9e33</li>
                         <li>SpeedCurve. (n.d.). Best Practices for Optimizing JavaScript. https://www.speedcurve.com/web-performance-guide/best-practices-for-optimizing-javascript/</li>
+                        <li>Monus, A. (2023, November 22). JavaScript Best Practices. Raygun. https://raygun.com/blog/javascript-best-practices/</li>
+                        <li>MDN Web Docs. (n.d.). JavaScript Code Style Guide. https://developer.mozilla.org/en-US/docs/MDN/Writing_guidelines/Code_style_guide/JavaScript</li>
+                        <li>Kramer, N. (2024, April 2). CSS Best Practices for Clean Code. Daily.dev. https://daily.dev/blog/css-best-practices-for-clean-code</li>
+                        <li>Ravoof, S. (2024, August 1). 14 CSS Best Practices for Beginners. Kinsta. https://kinsta.com/blog/css-best-practices/</li>
+                        <li>OpenAI. (2025). ChatGPT (o1) [Large language model]. https://chat.openai.com/chat</li>
+                        <li>Anthropic. (2025). Claude 3.7 Sonnet [Large language model]. https://claude.ai/</li>
                     </ul>
                 </div>
                 <!-- Story of the project, try Konami Command -->
